2006-04-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* all:        Incremented SASL version to 1.1.0
	* sasl.tcl:   Fixed the common mechanisms to all do the right
	* sasl.test:  thing when handed an empty challenge. The client
	              should always begin with SASL::step $ctx "" to see
	              if there is anything to send in the initial round.
	* gtoken.tcl: Support the X-GOOGLE-TOKEN SASL mechanism. Done
	* sasl.man:   as separate package due to additional dependencies
	              (http and tls required)

2006-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sasl.test: More boilerplate simplified via use of test support.
	* ntlm.test: (And hooked into the new common test support code).

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sasl.test: Hooked into the new common test support code.

2005-10-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ntlm.tcl: bug #1323295 - NTLM requires little endian unicode
	strings. Fixed generation on big-endian systems (eg: sparc).

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.man:  Added documentation.

2005-10-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ntlm.tcl:  Use tcllib 1.8 des module. Added NTLM tests. Fix to
	* ntlm.test: work with tcl 8.2.

2005-09-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl: Fixed 8.4isms and specified requirement to Tcl 8.2

2005-04-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* saslclient.tcl: Moved example out of the module into a new
	  directory 'sasl/' under the examples tree.

2005-02-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.test:  Added some tests.
	* sasl.tcl:   Changed namespace and package to SASL.
	* ntlm.tcl:   

2005-01-20  Pat Thoyts  <patthoyts@users.sourceforge.net>
