@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: sasl.test,v 1.5 2006/04/20 02:16:15 patthoyts Exp $
+# RCS: @(#) $Id: sasl.test,v 1.6 2006/04/20 10:14:11 patthoyts Exp $
 
 # -------------------------------------------------------------------------
 
@@ -176,6 +176,28 @@ test SASL-DIGESTMD5-4.1 {Check initial empty challenge is accepted.} {
         string compare $r $R(response)
     } res] $res
 } [list 0 0]
+
+test SASL-DIGESTMD5-4.2 "bug #1412021: ensure service used correctly" {
+    list [catch {
+        set service xmpp
+        set ctx [SASL::new -mechanism DIGEST-MD5 -service $service \
+                     -callback [list SASLCallback 0]]
+        SASL::step $ctx "nonce=\"0123456789\",realm=\"tcllib.sourceforge.net\""
+        set r [split [SASL::response $ctx] ,]
+        SASL::cleanup $ctx
+        foreach thing $r { 
+            set x [split $thing =]
+            set R([lindex $x 0]) [lindex [lindex $x 1] 0]
+        }
+        set A1 [SASL::md5_bin "tester:tcllib.sourceforge.net:secret"]
+        set A2 "AUTHENTICATE:$service/tcllib.sourceforge.net"
+        set A3 [SASL::md5_hex "$A1:$R(nonce):$R(cnonce)"]
+        set A4 [SASL::md5_hex $A2]
+        set r [SASL::md5_hex "$A3:0123456789:$R(nc):$R(cnonce):auth:$A4"]
+        string compare $r $R(response)
+    } res] $res
+} [list 0 0]
+
 
 # -------------------------------------------------------------------------
 
